# ic3-processing

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
ic3_processing/: __about__.py  __init__.py
ic3_processing/cli/: batch_processing.py  create_job_files.py  process_local.py
ic3_processing/cli/job_templates/: cvmfs_python.sh
ic3_processing/cli/scripts/: general_i3_processing.py
ic3_processing/modules/labels/: primary.py  recreate_and_add_mmc_tracklist.py  recreate_mctree.py
ic3_processing/modules/processing/: README.md  filter_events.py  partial.py  pseudo.py  snowstorm.py
ic3_processing/modules/pulses/: bright_doms.py  cleaning.py  combine_exclusions.py  combine_pulses.py  exclusion_data.py  mask_pulses.py  pulse_comparisons.py  pulse_modification_functions.py  pulse_modifications.py  pulse_segmentation.py  slc_pulse_bugfix.py
ic3_processing/modules/reco/: combine_i3_particle.py  monopod.py  reco.py  track_recos.py
ic3_processing/modules/utils/: tray_timer.py
ic3_processing/utils/: file_utils.py  setup.py
ic3_processing/utils/exp_data/: good_run_list_utils.py  livetime.py
resources/: batch_processing.py  create_job_files.py  process_local.py
resources/configs/: example_i3_exp.yaml  example_i3_mc.yaml
resources/job_templates/: cvmfs_python.sh
resources/scripts/: general_i3_processing.py
