[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ic3_processing"
description = "Framework for processing i3-files in IceCube."
readme = "README.md"
dynamic = ["version"]
authors = [
    { name = "Mirco Huennefeld", email = "mirco.huennefeld@tu-dortmund.de" },
]
maintainers = [
    { name = "Mirco Huennefeld", email = "mirco.huennefeld@tu-dortmund.de" },
]
requires-python = ">=3.7"

dependencies = [
    "numpy",
    "pyyaml",
    "click",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "ruff",
    "ic3-labels @ git+ssh://git@github.com/icecube/ic3-labels",
]

[project.urls]
Homepage = "https://github.com/mhuen/ic3-processing"
Documentation = "https://github.com/mhuen/ic3-processing"
"Bug Tracker" = "https://github.com/mhuen/ic3-processing/issues"
Discussions = "https://github.com/mhuen/ic3-processing/discussions"

[tool.setuptools]
packages = ["ic3_processing"]

[tool.setuptools.dynamic]
version = {attr = "ic3_processing.__version__"}

[tool.black]
line-length = 79
target-version = ["py38"]

[tool.ruff]
# select = ["ALL"]
fixable = ["I"]
ignore = [
    "D213",   # multi-line-summary-second-line incompatible with multi-line-summary-first-line
    "D203",   # one-blank-line-before-class" incompatible with no-blank-line-before-class
    "D401",   # non-imperative-mood
    "D417",   # undocumented-param
    "ANN101", # missing-type-self
    "ANN401", # any-type
    "FBT",    # flake8-boolean-trap
    "INP",    # flake8-no-pep420
    "T20",    # flake8-print
    "TCH",    # flake8-type-checking
    "S101",   # assert-used
    ]
line-length = 79
target-version = "py38"

[tool.ruff.pydocstyle]
convention = "numpy"
